<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260227094439 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // Intentionally no-op: schema changes were already applied in a previous migration.
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE badge (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, code VARCHAR(100) NOT NULL, description TEXT DEFAULT NULL, icon VARCHAR(255) DEFAULT NULL, xp_reward INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_badge_name ON badge (name)');
        $this->addSql('CREATE UNIQUE INDEX uniq_badge_code ON badge (code)');
        $this->addSql('CREATE TABLE category (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, slug VARCHAR(120) NOT NULL, description TEXT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_category_slug ON category (slug)');
        $this->addSql('CREATE UNIQUE INDEX uniq_category_name ON category (name)');
        $this->addSql('CREATE TABLE game_session (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, started_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, ended_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, status VARCHAR(20) NOT NULL, total_questions INT NOT NULL, correct_answers INT NOT NULL, duration_seconds INT DEFAULT NULL, earned_xp INT NOT NULL, user_id INT NOT NULL, quiz_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX idx_4586aafb853cd175 ON game_session (quiz_id)');
        $this->addSql('CREATE INDEX idx_4586aafba76ed395 ON game_session (user_id)');
        $this->addSql('CREATE TABLE question_type (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE quiz_rating (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, rating INT NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, quiz_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX idx_35cdd67b853cd175 ON quiz_rating (quiz_id)');
        $this->addSql('CREATE UNIQUE INDEX uniq_user_quiz_rating ON quiz_rating (user_id, quiz_id)');
        $this->addSql('CREATE INDEX idx_35cdd67ba76ed395 ON quiz_rating (user_id)');
        $this->addSql('CREATE TABLE user_badge (user_id INT NOT NULL, badge_id INT NOT NULL, PRIMARY KEY (user_id, badge_id))');
        $this->addSql('CREATE INDEX idx_1c32b345a76ed395 ON user_badge (user_id)');
        $this->addSql('CREATE INDEX idx_1c32b345f7a2c2fc ON user_badge (badge_id)');
        $this->addSql('ALTER TABLE game_session ADD CONSTRAINT fk_4586aafba76ed395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE game_session ADD CONSTRAINT fk_4586aafb853cd175 FOREIGN KEY (quiz_id) REFERENCES quiz (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE quiz_rating ADD CONSTRAINT fk_35cdd67ba76ed395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE quiz_rating ADD CONSTRAINT fk_35cdd67b853cd175 FOREIGN KEY (quiz_id) REFERENCES quiz (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE user_badge ADD CONSTRAINT fk_1c32b345a76ed395 FOREIGN KEY (user_id) REFERENCES "user" (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE user_badge ADD CONSTRAINT fk_1c32b345f7a2c2fc FOREIGN KEY (badge_id) REFERENCES badge (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE answer ADD content VARCHAR(255) NOT NULL');
        $this->addSql('ALTER TABLE answer ADD is_correct BOOLEAN NOT NULL');
        $this->addSql('ALTER TABLE answer ADD "position" INT NOT NULL');
        $this->addSql('ALTER TABLE answer ADD question_id INT NOT NULL');
        $this->addSql('ALTER TABLE answer ADD CONSTRAINT fk_dadd4a251e27f6bf FOREIGN KEY (question_id) REFERENCES question (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('CREATE INDEX idx_dadd4a251e27f6bf ON answer (question_id)');
        $this->addSql('ALTER TABLE question ADD content TEXT NOT NULL');
        $this->addSql('ALTER TABLE question ADD difficulty INT NOT NULL');
        $this->addSql('ALTER TABLE question ADD "position" INT NOT NULL');
        $this->addSql('ALTER TABLE question ADD points INT NOT NULL');
        $this->addSql('ALTER TABLE question ADD quiz_id INT NOT NULL');
        $this->addSql('ALTER TABLE question ADD CONSTRAINT fk_b6f7494e853cd175 FOREIGN KEY (quiz_id) REFERENCES quiz (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('CREATE INDEX idx_b6f7494e853cd175 ON question (quiz_id)');
        $this->addSql('ALTER TABLE quiz ADD title VARCHAR(160) NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD description TEXT NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD difficulty INT NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD status VARCHAR(20) NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD is_published BOOLEAN NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL');
        $this->addSql('ALTER TABLE quiz ADD created_by_id INT NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD category_id INT NOT NULL');
        $this->addSql('ALTER TABLE quiz ADD CONSTRAINT fk_a412fa92b03a8386 FOREIGN KEY (created_by_id) REFERENCES "user" (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE quiz ADD CONSTRAINT fk_a412fa9212469de2 FOREIGN KEY (category_id) REFERENCES category (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('CREATE INDEX idx_a412fa9212469de2 ON quiz (category_id)');
        $this->addSql('CREATE INDEX idx_a412fa92b03a8386 ON quiz (created_by_id)');
        $this->addSql('ALTER TABLE score ADD value INT NOT NULL');
        $this->addSql('ALTER TABLE score ADD max_value INT NOT NULL');
        $this->addSql('ALTER TABLE score ADD percentage NUMERIC(5, 2) NOT NULL');
        $this->addSql('ALTER TABLE score ADD created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL');
        $this->addSql('ALTER TABLE score ADD game_session_id INT NOT NULL');
        $this->addSql('ALTER TABLE score ADD user_id INT NOT NULL');
        $this->addSql('ALTER TABLE score ADD quiz_id INT NOT NULL');
        $this->addSql('ALTER TABLE score ADD CONSTRAINT fk_329937518fe32b32 FOREIGN KEY (game_session_id) REFERENCES game_session (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE score ADD CONSTRAINT fk_32993751a76ed395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('ALTER TABLE score ADD CONSTRAINT fk_32993751853cd175 FOREIGN KEY (quiz_id) REFERENCES quiz (id) NOT DEFERRABLE INITIALLY IMMEDIATE');
        $this->addSql('CREATE INDEX idx_32993751a76ed395 ON score (user_id)');
        $this->addSql('CREATE INDEX idx_32993751853cd175 ON score (quiz_id)');
        $this->addSql('CREATE UNIQUE INDEX uniq_329937518fe32b32 ON score (game_session_id)');
        $this->addSql('ALTER TABLE "user" ADD email VARCHAR(180) NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD roles JSON NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD password VARCHAR(255) NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD display_name VARCHAR(100) NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD xp INT NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD level INT NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL');
        $this->addSql('ALTER TABLE "user" ADD updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL');
        $this->addSql('CREATE UNIQUE INDEX uniq_8d93d649e7927c74 ON "user" (email)');
    }
}
