<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260303104949 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE user_answer (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, answered_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT DEFAULT NULL, question_id INT DEFAULT NULL, answer_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_BF8F5118A76ED395 ON user_answer (user_id)');
        $this->addSql('CREATE INDEX IDX_BF8F51181E27F6BF ON user_answer (question_id)');
        $this->addSql('CREATE INDEX IDX_BF8F5118AA334807 ON user_answer (answer_id)');
        $this->addSql('ALTER TABLE user_answer ADD CONSTRAINT FK_BF8F5118A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id)');
        $this->addSql('ALTER TABLE user_answer ADD CONSTRAINT FK_BF8F51181E27F6BF FOREIGN KEY (question_id) REFERENCES question (id)');
        $this->addSql('ALTER TABLE user_answer ADD CONSTRAINT FK_BF8F5118AA334807 FOREIGN KEY (answer_id) REFERENCES answer (id)');
        $this->addSql('ALTER TABLE answer ALTER content TYPE VARCHAR(20)');
        $this->addSql('ALTER TABLE question ADD label TEXT DEFAULT NULL');
        $this->addSql('ALTER TABLE question ADD type VARCHAR(20) DEFAULT NULL');
        $this->addSql('UPDATE question SET label = content WHERE label IS NULL');
        $this->addSql("UPDATE question SET type = 'TRUE_FALSE' WHERE type IS NULL");
        $this->addSql('ALTER TABLE question ALTER label SET NOT NULL');
        $this->addSql('ALTER TABLE question ALTER type SET NOT NULL');
        $this->addSql('ALTER TABLE question DROP content');
        $this->addSql('ALTER TABLE quiz ADD created_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL');
        $this->addSql('UPDATE quiz SET created_at = NOW() WHERE created_at IS NULL');
        $this->addSql('ALTER TABLE quiz ALTER created_at SET NOT NULL');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE user_answer DROP CONSTRAINT FK_BF8F5118A76ED395');
        $this->addSql('ALTER TABLE user_answer DROP CONSTRAINT FK_BF8F51181E27F6BF');
        $this->addSql('ALTER TABLE user_answer DROP CONSTRAINT FK_BF8F5118AA334807');
        $this->addSql('DROP TABLE user_answer');
        $this->addSql('ALTER TABLE answer ALTER content TYPE VARCHAR(10)');
        $this->addSql('ALTER TABLE question ADD content VARCHAR(180) NOT NULL');
        $this->addSql('ALTER TABLE question DROP label');
        $this->addSql('ALTER TABLE question DROP type');
        $this->addSql('ALTER TABLE quiz DROP created_at');
    }
}
